; ModuleID = '/home/carl/AnghaBench/nanomsg/src/protocols/reqrep/extr_req.c_nn_req_term.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/protocols/reqrep/extr_req.c_nn_req_term.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_req = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_req_term(%struct.nn_req* %0) #0 {
  %2 = alloca %struct.nn_req*, align 8
  store %struct.nn_req* %0, %struct.nn_req** %2, align 8
  %3 = load %struct.nn_req*, %struct.nn_req** %2, align 8
  %4 = getelementptr inbounds %struct.nn_req, %struct.nn_req* %3, i32 0, i32 2
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 2
  %6 = call i32 @nn_timer_term(i32* %5)
  %7 = load %struct.nn_req*, %struct.nn_req** %2, align 8
  %8 = getelementptr inbounds %struct.nn_req, %struct.nn_req* %7, i32 0, i32 2
  %9 = call i32 @nn_task_term(%struct.TYPE_2__* %8)
  %10 = load %struct.nn_req*, %struct.nn_req** %2, align 8
  %11 = getelementptr inbounds %struct.nn_req, %struct.nn_req* %10, i32 0, i32 2
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 1
  %13 = call i32 @nn_msg_term(i32* %12)
  %14 = load %struct.nn_req*, %struct.nn_req** %2, align 8
  %15 = getelementptr inbounds %struct.nn_req, %struct.nn_req* %14, i32 0, i32 2
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = call i32 @nn_msg_term(i32* %16)
  %18 = load %struct.nn_req*, %struct.nn_req** %2, align 8
  %19 = getelementptr inbounds %struct.nn_req, %struct.nn_req* %18, i32 0, i32 1
  %20 = call i32 @nn_fsm_term(i32* %19)
  %21 = load %struct.nn_req*, %struct.nn_req** %2, align 8
  %22 = getelementptr inbounds %struct.nn_req, %struct.nn_req* %21, i32 0, i32 0
  %23 = call i32 @nn_xreq_term(i32* %22)
  ret void
}

declare dso_local i32 @nn_timer_term(i32*) #1

declare dso_local i32 @nn_task_term(%struct.TYPE_2__*) #1

declare dso_local i32 @nn_msg_term(i32*) #1

declare dso_local i32 @nn_fsm_term(i32*) #1

declare dso_local i32 @nn_xreq_term(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
